--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node": "10.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
+    "url": "https://github.com/JayWll/SnoopysBF-tweets"
   },
   "license": "MIT",
   "keywords": [
